--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -7,6 +7,7 @@
     bottom: 0;
     left: 0;
     background: $white;
+    box-shadow: 0px -1px 10px rgba(0, 0, 0, 0.2);
     z-index: 10;
 
     display: flex;
