--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+@import './variables.scss';
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 
 *,
@@ -28,4 +29,6 @@ code {
         monospace;
 }
 
-
+.swiper-pagination-bullet.swiper-pagination-bullet-active{
+    background: $orange;
+}
