Make the base of page "About recipe" fixed routers for this and create function likesFormat for formatting a big number of likes to short type

--- a/src/components/Search/Result/Result.module.scss
+++ b/src/components/Search/Result/Result.module.scss
@@ -16,3 +16,13 @@
     color: $brown;
     font-weight: 400;
 }
+
+.load__btn{
+    width: 160px;
+    height: 45px;
+    text-align: center;
+    background: $pink;
+    border-radius: 45px;
+    margin-bottom: 20px;
+    color: $brown;
+}
