--- a/src/common/RecipeCard/Recipe.module.scss
+++ b/src/common/RecipeCard/Recipe.module.scss
@@ -64,6 +64,7 @@
 }
 
 .title{
+    color: $brown;
     font-weight: 400;
     height: 48px;
     overflow: hidden;
@@ -71,6 +72,9 @@
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    &__wrapper{
+        text-decoration-color: $brown;
+    }
 }
 
 .meta{
