--- a/src/components/Search/Form/Form.module.scss
+++ b/src/components/Search/Form/Form.module.scss
@@ -19,6 +19,17 @@
     position: relative;
 }
 
+.autocomplete__list{
+    width: 100%;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    border-radius: 10px;
+    background: $pink;
+    list-style-type: none;
+    z-index: 10;
+}
+
 .input{
     width: 100%;
     height: 40px;
