--- a/src/components/Recipe/Ingredients/Ingredients.module.scss
+++ b/src/components/Recipe/Ingredients/Ingredients.module.scss
@@ -11,7 +11,7 @@
 
 .list{
     display: flex;
-    justify-content: start;
+    justify-content: center;
     flex-wrap: wrap;
     align-items: center;
 }
@@ -20,8 +20,4 @@
     width: 130px;
     text-align: center;
     margin: 20px 10px;
-    // img{
-    //     width: 100px;
-    //     height: 110px;
-    // }
 }
