--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,11 +1,13 @@
 @import '../../variables.scss';
 
 .nav{
+    max-width: 500px;
     width: 100%;
     height: 70px;
     position: fixed;
     bottom: 0;
-    left: 0;
+    left: 50%;
+    transform: translateX(-50%);
     background: $white;
     box-shadow: 0px -1px 10px rgba(0, 0, 0, 0.2);
     z-index: 10;
